--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="city" id="city" class="input" type="text" placeholder="Ciudad" required pattern="[\s\S]{10,40}" data-tipo="ciudad">
+                        <input name="city" id="city" class="input" type="text" placeholder="Ciudad" required data-tipo="ciudad">
                         <label class="input-label" for="city">Ciudad</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
